<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_label_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/settings"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dark_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corners_rectangle"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/dark_theme"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_settings" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_text_magic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corners_rectangle"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/magic_text"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_mode" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_magic_text"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corners_rectangle"
        android:hint="@string/magic_text_hint"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:padding="4dp"
        android:text="@string/magic_text_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text_magic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_compute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_magic_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_magic_text_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corners_rectangle"
        android:padding="8dp"
        android:textColor="@color/text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_compute"
        tools:text="Spannable result here"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corners_rectangle"
        android:backgroundTint="@color/background"
        android:padding="3dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="@id/et_magic_text"
        app:layout_constraintTop_toTopOf="@id/et_magic_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_magic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="et_magic_text,ic_close,btn_compute"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>